refactor and structure
